# slicerio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SegmentationFileFormat.md  UsingStandardTerminology.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
examples/: README.txt  example_segmentation.py
slicerio/: __init__.py  _version.py  data_helper.py  segmentation.py  server.py
slicerio/data/: CTChest4.nrrd  Segmentation.seg.nrrd  SegmentationOverlapping.seg.nrrd
slicerio/tests/: test_segmentation.py
